feat: payslip summary and tidu up
